--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "^2.1.8",
+    "swiper": "^8.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
